Overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 }
 
 #question {
+  padding: 15px;
   height: 100px;
   display: flex;
   align-items: center;
@@ -30,6 +31,7 @@ body {
       rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+  overflow-y: auto;
 }
 
 #display {
